[gd_scene load_steps=2 format=3 uid="uid://b17h23m3urfpf"]

[ext_resource type="Script" uid="uid://c84jgqw5qtlla" path="res://scenes/main-menus/settings-menu/settings-menu.gd" id="1_ad47p"]

[node name="Settings menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ad47p")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 79.0
offset_right = 766.0
offset_bottom = 570.0

[node name="LanguageButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/LanguageButton" to="." method="_on_language_button_pressed"]
[connection signal="visibility_changed" from="VBoxContainer/LanguageButton" to="." method="_on_language_button_visibility_changed"]
